syntax = "proto3";

package proto;

message UUID {
    string value = 1;
}

message Session {
    UUID accessToken = 1;
    UUID userUID = 2;
}

message Nothing {
}

message User {
    UUID uid = 1;
    string nickname = 2;
    string email = 3;
    string avatar = 4;
    int32 points = 5;
}

message UserSignUp {
    string nickname = 1;
    string email = 2;
    string password = 3;
}

message UserSignIn {
    string nickname = 1;
    string password = 2;
}

message LeadersRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message LeadersResponse {
    repeated User users = 1;
    int32 Count = 2;
}

message AddAvatarRequest {
    UUID userUID = 1;
    string name = 2;
}

service SessionService {
	rpc ByToken (UUID) returns (Session) {}
	rpc ByUserUID (UUID) returns (Session) {}
	rpc Add (Session) returns (Nothing) {}
	rpc RemoveByToken (UUID) returns (Nothing) {}
}

service UserService {
    rpc Leaders (LeadersRequest) returns (LeadersResponse) {}
    rpc BySessionToken(UUID) returns (User) {}
    rpc ByUID(UUID) returns (User) {}
    rpc SignUp(UserSignUp) returns (Nothing) {}
    rpc SignIn(UserSignIn) returns (User) {}
    rpc AddAvatar(AddAvatarRequest) returns (Nothing) {}
}
